<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".area_triangulo.AreaTrianguloFragment"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="10dp"
    />

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/triangulo"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base"
            android:id="@+id/eBase"
            android:inputType="number"
            android:padding="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:id="@+id/eAltura"
            android:inputType="number"
            android:padding="10dp"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/calcular"
            android:padding="10dp"
            android:id="@+id/bCalcular"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:id="@+id/tResultado"
            android:padding="10dp"/>


</LinearLayout>