<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".RectanguloFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AreaRectangulo"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/rectangulo"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:hint="@string/Base"
                android:id="@+id/eBase"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Altura"
                android:textColor="@color/colorPrimary"
                android:id="@+id/eAltura"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/Calcular"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:id="@+id/bCalcular"/>

    <TextView
            android:text="@string/Resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tResultado"/>


</LinearLayout>
