<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".circulo.CirculoFragment"
              android:orientation="vertical">

    <ImageView android:id="@+id/imgAreaCirculo"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:src="@drawable/areacirculo"
               android:contentDescription="@string/areaCirculo"/>

    <EditText android:id="@+id/edtRadio"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/radio"
              android:layout_margin="12dp"
              android:textSize="20sp"
              android:textStyle="bold"
              android:inputType="numberDecimal"/>

    <Button android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/calcular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@color/colorAccent"/>

    <TextView android:id="@+id/txtArea"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="12dp"
              android:layout_marginEnd="12dp"
              android:layout_marginTop="40dp"
              android:textSize="30sp"
              android:textStyle="bold"
              android:visibility="gone"
    />

</LinearLayout>