<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rombo.RomboView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_area_rombo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
            />

        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imagen_rombo"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lado_rombo"
                        android:id="@+id/eLadoRombo"
                        android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular_area"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:id="@+id/bCalcularAreaRombo"
        />
    </LinearLayout>


</LinearLayout>